--- a/css/responsive_for_board.css/kb-mobile.css
+++ b/css/responsive_for_board.css/kb-mobile.css
@@ -181,8 +181,8 @@
     font-size: 16px;
   }
   .kb-avatar {
-    width: 28px;
-    height: 28px;
+    width: 34px;
+    height: 34px;
     font-size: 16px;
   }
   .kb-prio {
@@ -282,8 +282,8 @@
     font-size: 16px;
   }
   .kb-avatar {
-    width: 26px;
-    height: 26px;
+    width: 32px;
+    height: 32px;
     font-size: 16px;
   }
   .kb-prio__icon {
